# pinglog

./: .env.example  .gitignore  README.md  pyproject.toml
db/: models.py
src/pinglog/: config.py  datatypes.py  main.py  ping_messages.toml  util.py
src/pinglog/bot/: echobot.py  handlers.py  scheduler.py
src/pinglog/db/: models.py  queries.py
src/pinglog/migrations/: 001_add_xp_breakdown.py  002_add_duration_estimate.py  run_migrations.py
